--- a/app/src/main/res/layout/activity_add_just_item.xml
+++ b/app/src/main/res/layout/activity_add_just_item.xml
@@ -152,10 +152,10 @@
             android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add"
-            android:layout_marginBottom="10dp"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"/>
+            android:layout_marginBottom="10dp"
+            android:text="Add" />
 
         <ScrollView
             android:layout_width="match_parent"
