--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/itemTypeTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -34,7 +35,7 @@
 
 
         <TextView
-            android:id="@+id/categories"
+            android:id="@+id/itemNameTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -204,10 +205,34 @@
                         android:text="Ends in " />
                     <TextView
                         android:textColor="@color/blue"
-                        android:id="@+id/timer"
+                        android:id="@+id/daysTxt"
+                        android:textSize="10sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="timer*" />
+                        android:text="d*" />
+
+                    <TextView
+                        android:textColor="@color/blue"
+                        android:id="@+id/hoursTxt"
+                        android:textSize="10sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="h*" />
+
+                    <TextView
+                        android:textColor="@color/blue"
+                        android:id="@+id/minsTxt"
+                        android:textSize="10sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="m*" />
+                    <TextView
+                        android:textColor="@color/blue"
+                        android:id="@+id/secTxt"
+                        android:textSize="10sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="s*" />
 
                 </LinearLayout>
 
