--- a/app/src/main/res/layout/card_add_more.xml
+++ b/app/src/main/res/layout/card_add_more.xml
@@ -86,17 +86,45 @@
                 <!--end horizontal-->
 
 
-
-
-
                 <Button
                     android:id="@+id/delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:text="Delete" />
             </RelativeLayout>
+
+
+
+            <RelativeLayout
+                android:layout_marginTop="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+              >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/timeTxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="time*">
+
+                    </TextView>
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/addTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="Time for end of Deal" />
+            </RelativeLayout>
+            <!--horizontal-->
+
 
         </androidx.cardview.widget.CardView>
 
