--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -14,13 +14,13 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="40sp"
-        android:text="Favorites" />
+        android:text="Equations and resources" />
 
     <GridView
         android:id="@+id/idGVCourses"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:numColumns="2" />
 
 
