--- a/app/src/main/res/layout/image_gv_item.xml
+++ b/app/src/main/res/layout/image_gv_item.xml
@@ -69,8 +69,9 @@
                     android:focusable="true"
                     android:background="@color/white"
                     android:layout_gravity="bottom"
+                    android:src="@drawable/ic_baseline_favorite_24"
                     app:roundPercent="1"
-                    app:srcCompat="@drawable/ic_baseline_favorite_24" />
+                    />
             </LinearLayout>
 
         </FrameLayout>
