--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="drawer_color">#005ba9</color>
+    <color name="drawer_text">#dff6ff</color>
 
     onboarding colors
     <color name="background">#F0F4F3</color>
